--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT"
 repository = "https://github.com/harshdoesdev/pikodb"
 readme = "README.md"
 keywords = ["in-memory", "vector", "database"]
-categories = ["Database implementations"]
+categories = ["database-implementations"]
 
 [dependencies]
 bincode = "1.3.3"
